# Watermark-Android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/darko/watermark/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Utils.cpp  WatermarkAlgorithm.cpp  WatermarkAlgorithm.h  native-lib.cpp
app/src/main/java/darko/watermark/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/darko/watermark/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
